🚑 긴급 수정 : jar 파일로 프로젝트 실행 시 이메일 폼을 찾지 못하는 오류 수정